# chip8-emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  chip8.c  makefile
include/: chip8.h
src/: chip8.c  chip8_op.c  main.c  sdl_config.c
src/chip8/: chip8.c  chip8.h
src/config/: config.c  config.h
src/sdl/: sdl_init.c  sdl_init.h
